--- a/heart_attack.ipynb
+++ b/heart_attack.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
        "9    0      2       1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
        "max      3.000000    1.000000  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +524,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -590,10 +590,6 @@
        "      <th>restecg</th>\n",
        "      <th>thalachh</th>\n",
        "      <th>exng</th>\n",
-       "      <th>oldpeak</th>\n",
-       "      <th>slp</th>\n",
-       "      <th>caa</th>\n",
-       "      <th>thall</th>\n",
        "      <th>output</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -609,10 +605,6 @@
        "      <td>0</td>\n",
        "      <td>0.603053</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.370968</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.333333</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -626,10 +618,6 @@
        "      <td>1</td>\n",
        "      <td>0.885496</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.564516</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.666667</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -643,10 +631,6 @@
        "      <td>0</td>\n",
        "      <td>0.770992</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.225806</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.666667</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -660,10 +644,6 @@
        "      <td>1</td>\n",
        "      <td>0.816794</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.129032</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.666667</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -677,10 +657,6 @@
        "      <td>1</td>\n",
        "      <td>0.702290</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.096774</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.666667</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -694,10 +670,6 @@
        "      <td>1</td>\n",
        "      <td>0.587786</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.064516</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.333333</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -711,10 +683,6 @@
        "      <td>0</td>\n",
        "      <td>0.625954</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.209677</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.666667</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -728,10 +696,6 @@
        "      <td>1</td>\n",
        "      <td>0.778626</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.000000</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -745,10 +709,6 @@
        "      <td>1</td>\n",
        "      <td>0.694656</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.080645</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.000000</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -762,10 +722,6 @@
        "      <td>1</td>\n",
        "      <td>0.786260</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.258065</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.666667</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -785,20 +741,20 @@
        "8  0.479167    1  0.666667  0.735849  0.166667    1        1  0.694656   0.0   \n",
        "9  0.583333    1  0.666667  0.528302  0.095890    0        1  0.786260   0.0   \n",
        "\n",
-       "    oldpeak  slp  caa     thall  output  \n",
-       "0  0.370968  0.0  0.0  0.333333       1  \n",
-       "1  0.564516  0.0  0.0  0.666667       1  \n",
-       "2  0.225806  1.0  0.0  0.666667       1  \n",
-       "3  0.129032  1.0  0.0  0.666667       1  \n",
-       "4  0.096774  1.0  0.0  0.666667       1  \n",
-       "5  0.064516  0.5  0.0  0.333333       1  \n",
-       "6  0.209677  0.5  0.0  0.666667       1  \n",
-       "7  0.000000  1.0  0.0  1.000000       1  \n",
-       "8  0.080645  1.0  0.0  1.000000       1  \n",
-       "9  0.258065  1.0  0.0  0.666667       1  "
+       "   output  \n",
+       "0       1  \n",
+       "1       1  \n",
+       "2       1  \n",
+       "3       1  \n",
+       "4       1  \n",
+       "5       1  \n",
+       "6       1  \n",
+       "7       1  \n",
+       "8       1  \n",
+       "9       1  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,25 +772,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, Y_train, Y_test = train_test_split(df.loc[:,'age': 'thall'], df['output'], test_size = 0.2, random_state = 42)"
+    "X_train, X_test, Y_train, Y_test = train_test_split(df.loc[:,'age': 'exng'], df['output'], test_size = 0.2, random_state = 42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((242, 13), (61, 13))"
+       "((242, 9), (61, 9))"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +824,7 @@
        "SVC(kernel='linear')"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,23 +846,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[25  4]\n",
-      " [ 5 27]]\n",
+      "[[23  6]\n",
+      " [ 6 26]]\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.83      0.86      0.85        29\n",
-      "           1       0.87      0.84      0.86        32\n",
+      "           0       0.79      0.79      0.79        29\n",
+      "           1       0.81      0.81      0.81        32\n",
       "\n",
-      "    accuracy                           0.85        61\n",
-      "   macro avg       0.85      0.85      0.85        61\n",
-      "weighted avg       0.85      0.85      0.85        61\n",
+      "    accuracy                           0.80        61\n",
+      "   macro avg       0.80      0.80      0.80        61\n",
+      "weighted avg       0.80      0.80      0.80        61\n",
       "\n"
      ]
     }
@@ -926,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +891,7 @@
        "SVC()"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -947,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,23 +912,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[26  3]\n",
-      " [ 4 28]]\n",
+      "[[23  6]\n",
+      " [ 5 27]]\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.87      0.90      0.88        29\n",
-      "           1       0.90      0.88      0.89        32\n",
+      "           0       0.82      0.79      0.81        29\n",
+      "           1       0.82      0.84      0.83        32\n",
       "\n",
-      "    accuracy                           0.89        61\n",
-      "   macro avg       0.88      0.89      0.89        61\n",
-      "weighted avg       0.89      0.89      0.89        61\n",
+      "    accuracy                           0.82        61\n",
+      "   macro avg       0.82      0.82      0.82        61\n",
+      "weighted avg       0.82      0.82      0.82        61\n",
       "\n"
      ]
     }
@@ -985,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,8 +967,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": ""
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   },
   "orig_nbformat": 2
  },
